INTYG-7104: Städade bort meningslös JVM-flagga samt lade till transaktions-annotering