@@ -73,8 +73,7 @@ gretty {
                '-Dspring.profiles.active=dev,rhs-it-stub,rhs-srs-stub,caching-enabled',
                '-Dconfig.file=' + projectDir + '/src/main/resources/dev.properties',
                '-Dcredentials.file=' + projectDir + '/src/main/resources/dev-credentials.properties',
-               '-Dresources.folder=/' +projectDir + '/../src/main/resources',
-               '-XX:MaxPermSize=256M'
+               '-Dresources.folder=/' +projectDir + '/../src/main/resources'
                ]
 
     /***************** Konfiguration för att köra med SITHS och HSA aktiverat lokalt. *******************/
